# flygpu

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  build.sh  compile_flags.txt  main.c  quad.frag
examples/: animation.c  blank.c  cameras.c  colors.c  common.h  demo.c  few.c  interpolation.c  main.c  many.c  materials.c  sprites.c  spritesheet.c  template.c
include/flygpu/: flygpu.h  linalg.h  macros.h  utils.h
shaders/: environment.frag.hlsl  environment.vert.hlsl  quad.vert  quad3.frag  quad3.frag.glsl  quad3.frag.hlsl  quad3.hlsl  quad3.vert  quad3.vert.glsl  quad3.vert.hlsl  shading.frag  shading.frag.glsl  shading.frag.hlsl  shading.hlsl  shading.vert  viewport.vert.glsl  viewport.vert.hlsl
src/: config.h  environment_stage.c  environment_stage.h  flygpu.c  linalg.c  linalg.h  quad3_stage.c  quad3_stage.h  quad3pline.c  quad3pline.h  quad3stage.c  quad3stage.h  renderer.c  shader.c  shader.h  shading_stage.c  shading_stage.h  shadingstage.c  shadingstage.h  texture.h  utils.c
